@@ -5,6 +5,7 @@
 * Fix type annotations of `CallList`. See #593
 * Replaced toml with tomli and tomli-w.
 * `request` object is attached to any custom exception provided as `Response` `body` argument. See #588
+* Fixed mocked responses leaking between tests when `assert_all_requests_are_fired` and a request was not fired.
 
 0.22.0
 ------
